--- a/HumanResourcesDepartmentWPFApp.csproj
+++ b/HumanResourcesDepartmentWPFApp.csproj
@@ -16,4 +16,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+    <Folder Include="DB\" />
+  </ItemGroup>
+
 </Project>
