--- a/HumanResourcesDepartmentWPFApp.csproj
+++ b/HumanResourcesDepartmentWPFApp.csproj
@@ -11,10 +11,14 @@
   <ItemGroup>
     <None Remove="123.jpg" />
     <None Remove="Images\1234.jpg" />
+    <None Remove="Images\ty.gif" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Images\1234.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\ty.gif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -25,6 +29,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="WpfAnimatedGif" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
