--- a/HumanResourcesDepartmentWPFApp.csproj
+++ b/HumanResourcesDepartmentWPFApp.csproj
@@ -11,11 +11,15 @@
   <ItemGroup>
     <None Remove="123.jpg" />
     <None Remove="Images\1234.jpg" />
+    <None Remove="Images\awaitT.gif" />
     <None Remove="Images\ty.gif" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Images\1234.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\awaitT.gif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\ty.gif">
